# antarasu.github.io

./: .nojekyll  README.md  about.html  credentials.html  experience.html  index.html  projects.html  pyproject.toml  requirements.txtExport  robots.txt  search.json  sitemap.xml
.github/workflows/: quarto-publish.yml
Assignment01/: buantarasu_system_info.qmd
docs/: about.html  credentials.html  experience.html  index.html  projects.html  search.json  sitemap.xml  styles.css
docs/site_libs/bootstrap/: bootstrap-e8b85de0915df15fee6f8e0f94bb678b.min.css
ePortfolio/: _quarto.yml  about.qmd  credentials.qmd  experience.qmd  index.qmd  projects.qmd  pyproject.toml  styles.css
ePortfolio/_site/: index.html  search.json
ePortfolio/_site/site_libs/bootstrap/: bootstrap-c9ca0ed9a8ec2536e99622c7df3690b2.min.css
site_libs/bootstrap/: bootstrap-0c762534045ae9f0a2ab1884a7fe3f51.min.css  bootstrap-5b4d16b5c8166060f1931cad5ebde7da.min.css  bootstrap-96aa6ad552848b67d8b138c496cb9c85.min.css  bootstrap-9da056ff205090014267d14ac5441380.min.css  bootstrap-d06ffdc2dc06694f4e03dd7148f39b18.min.css
