[tool.poetry]
name = "antarasu-github-io"
version = "0.1.0"
description = ""
authors = ["Antara Sudhir <antarasu@bu.edu>"]
readme = "README.md"
packages = [{include = "antarasu"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
